# iSAGE

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  cli.py  isage_workflow.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/datasets/: bsb_256.yaml  bsb_256_binary_building.yaml  bsb_256_binary_car.yaml  bsb_256_binary_perm.yaml  bsb_256_binary_road.yaml  bsb_layer0.yaml  bsb_layer1.yaml  bsb_layer2.yaml  bsb_layer3.yaml  cityscapes_top5.yaml  vaihingen.yaml  vaihingen_1k.yaml  vaihingen_1k_v3.yaml  vaihingen_5classes.yaml
configs/training/: deeplabv3plus_resnet50_dense_ce.yaml  deeplabv3plus_resnet50_multi_ewdl.yaml  fpn_efficientnet_b7_dense_ce.yaml  fpn_efficientnet_b7_multi_ewdl.yaml  linknet_efficientnet_b7_dense_ce.yaml  linknet_efficientnet_b7_multi_ewdl.yaml  segformer_mitb2_dense_ce.yaml  segformer_mitb2_multi_ewdl.yaml  unet_efficientnet_b7.yaml  unet_efficientnet_b7_binary_ewdl.yaml  unet_efficientnet_b7_cityscapes_top5_dense_ce.yaml  unet_efficientnet_b7_cityscapes_top5_ewdl.yaml  unet_efficientnet_b7_dense_bce.yaml  unet_efficientnet_b7_dense_ce.yaml  unet_efficientnet_b7_dense_dice.yaml  (+2 more)
docs/: annotator-reference.md  architecture.md  bring-your-own-data.md  bring-your-own-trainer.md  ewdl.md  github_setup.md  json-record-spec.md  smp-modifications.md
segmentation_models_pytorch/: __init__.py
src/: __init__.py  notebook_widgets.py  workflow.py
tests/: conftest.py  test_byot_integration.py  test_cli.py  test_session_view.py  test_workflow.py
tools/: launch_annotation_tool.py
(+178 files in other folders)
